[package]
name = "identity"
version = "0.1.0"
authors = ["CPerezz <carlos@caelumlabs.com>"]
edition = "2018"
documentation = "https://github.com/CPerezz/caelum-id"
homepage = "https://github.com/CPerezz/caelum-id"
repository = "https://github.com/CPerezz/caelum-id"
readme = ".README.md"
license = "MIT"

[dependencies]
web3 = "0.5.1"
rustc-hex = "2.0.1"
ethabi = "6.1.0"
tiny-keccak = "1.4.2"
ethereum-types = "0.4.0"



